      the names of the most common (one, two and three) qubit gates
    - Added qpp::QCircuitDescription and qpp::QCircuit classes in the new header
      file "classes/circuits.h" for simulating qudit quantum circuits
      BE AWARE: this is (still) work in progress, not yet complete, bugs may
      still lingering around

Version 1.1 - 26 November 2018
    - Added new functions in "operations.h":
          qpp::QFT()      - qudit quantum Fourier transform (includes qubit
                            QFT as a special case) on an entire quantum state
                            (state vector or density matrix)
          qpp::applyQFT() - qpply the qudit quantum Fourier transform on a
                            subset of qudits of a state vector or density matrix
    - Added Quantum Fourier transform example in "examples/qft.cpp"
    - Added new member functions for qpp::Gates:
          qpp::Gates::RX()   - rotation around X
          qpp::Gates::RY()   - rotation around Y
          qpp::Gates::RZ()   - rotation around Z
          qpp::Gates.SWAPd() - qudit SWAP gate
    - Added a suite of stress tests in "stress_tests" (only for POSIX systems)
    - Added Qiskit and QuTiP stress tests in "stress_tests/python"

Version 1.0 - 3 July 2018
    - Added full support for reversible classical circuits, added
      "classes/reversible.h" header file that contains the following classes:
          qpp::Dynamic_bitset - bitsets of variable length
          qpp::Bit_circuit    - classical reversible circuits
    - Added "examples/reversible.cpp" example
    - The path to MATLAB can now be specified in the CMake command line (not
      hard coded anymore), such as
          cmake -DWITH_MATLAB="/Applications/MATLAB_R2017b.app" ..
    - qpp::ket operator "" _ket(), qpp::ket operator "" _bra() and
      qpp::ket operator "" _prj() are now inside the newly introduced inline
      namespace qpp::literals
    - Minor bug in qpp::Exception::what(), thanks Nick Lewycky for spotting it